clutter-1.0 (1.0.8-2) UNRELEASED; urgency=low

  * debian/control:
  - bump Standards-Version to 3.8.3

 -- Gustavo Noronha Silva <kov@debian.org>  Mon, 19 Oct 2009 15:05:42 -0200

clutter-1.0 (1.0.8-1) unstable; urgency=low

  * New upstream release
  * debian/control:
  - adopt new GObject-Introspection mini-policy, by build-depending on
    gobject-introspection >= 0.6.5-3, and using the new gir1.0-* packages
  * debian/control, libclutter-1.0-0.install, gir1.0-clutter-1.0.install:
  - add new package for the typelib files
  * debian/rules:
  - make dh_girepository be called on the packages

 -- Gustavo Noronha Silva <kov@debian.org>  Mon, 19 Oct 2009 13:55:06 -0200

clutter-1.0 (1.0.6-1) unstable; urgency=low

  * New upstream release

 -- Gustavo Noronha Silva <kov@debian.org>  Wed, 30 Sep 2009 19:25:03 +0100

clutter-1.0 (1.0.0-1) unstable; urgency=low

  [ Loïc Minier ]
  * Downgrade pkg-config dep to a recommends.
  * Update download URL in copyright.
  * Use LDFLAGS/CFLAGS vars directly to avoid overriding them completely; bdep
    on cdbs >= 0.4.41.
  * Wrap build-deps and deps.
  * Let libclutter-0.8-dev dep on ${shlibs:Depends}.
  * Bdep on libpango1.0-dev (>= 1.18) and libglib2.0-dev (>= 2.14)
    explicitly.
  * Cleanup rules.
  * Use CDBS gnome.mk class instead of autotools.

  [ Gustavo Noronha Silva ]
  * New stable upstream release
  * Updated build-dependencies according to upstream's configure.ac
  * Build-Depend on cairo explicitly
  * debian/control:
  - make the doc package clutter-version-specific (libclutter-1.0-doc),
    and make it conflict with libclutter-doc
  * debian/copyright:
  - fixed and updated information with recent copyright changes

 -- Gustavo Noronha Silva <kov@debian.org>  Thu, 30 Jul 2009 12:48:00 +0200

clutter (0.8.8-1) unstable; urgency=low

  * New upstream release.
  * Ship the COGL documentation
  * Clean up minor lintian warnings

 -- Ross Burton <ross@debian.org>  Fri, 19 Jun 2009 11:38:03 +0100
