@@ -1,7 +1,13 @@
 clutter-1.0 (1.0.8-2) UNRELEASED; urgency=low
 
+  [ Gustavo Noronha Silva ]
   * debian/control:
   - bump Standards-Version to 3.8.3
+
+  [ Emilio Pozuelo Monfort ]
+  * debian/control.in,
+    debian/rules:
+    - GNOMEify.
 
  -- Gustavo Noronha Silva <kov@debian.org>  Mon, 19 Oct 2009 15:05:42 -0200
 
